# langmem-learning

./: .gitignore  README.md
langmem/: .gitignore  Makefile  README.md  langgraph.json  pyproject.toml
langmem/.github/workflows/: deploy_docs.yml  release.yml
langmem/docs/: mkdocs.yml
langmem/docs/_scripts/: generate_api_reference_links.py  notebook_hooks.py
langmem/docs/docs/: background_quickstart.md  hot_path_quickstart.md  index.md
langmem/docs/docs/concepts/: conceptual_guide.md
langmem/docs/docs/guides/: delayed_processing.md  dynamically_configure_namespaces.md  extract_episodic_memories.md  extract_semantic_memories.md  manage_user_profile.md  memory_tools.md  optimize_compound_system.md  optimize_memory_prompt.md  summarization.md  use_tools_in_crewai.md  use_tools_in_custom_agent.md
langmem/docs/docs/reference/: index.md  memory.md  prompt_optimization.md  short_term.md  tools.md  utils.md
langmem/docs/overrides/: main.html
langmem/docs/overrides/partials/: comments.html
langmem/examples/intro_videos/: procedural_memory.ipynb  semantic_memory.ipynb
langmem/examples/standalone_examples/: README.md  custom_store_example.py
langmem/tests/: test_docstring_examples.py
langmem/tests/cassettes/: ed2e87ca-f890-4900-9a09-dfbc12b51964.yaml
langmem/tests/short_term/: test_summarization.py  test_summarization_async.py  utils.py
research_notes/: 01_langmem项目设计分析.md  02_agent记忆问题与开源解决方案对比.md  03_langmem技术实现细节分析.md  README.md
